# stupid-crab-rest-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  stupid-crab-rest-api.postman_collection.json
src/: main.rs  server.rs
src/config/: database.rs
src/items/: handlers.rs  repositories.rs  usecases.rs
src/server/: products.rs
src/server/items/: entities.rs  handlers.rs  repositories.rs  usecases.rs
src/server/products/: entities.rs  handlers.rs  repositories.rs  usecases.rs
