[package]
name = "axum-stupid-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.1", features = ["full"] }
mongodb = "2.5"
bson = "2.6"
tracing-subscriber = "0.3.17"
tracing = "0.1"